# tiny-snek

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.__project_slug }}/: .gitignore  DEVELOPMENT.md  Pipfile  README.rst  justfile  pyproject.toml  settings.ini
{{ cookiecutter.__project_slug }}/tests/: test_session.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.module_name }}/: __main__.py  create_db.py  database.py  models.py
{{ cookiecutter.module_name|replace("_","-") }}/: .gitignore  .hgignore  DEVELOPMENT.md  LICENSE.txt  README.rst  pyproject.toml  setup.py
{{ cookiecutter.module_name|replace("_","-") }}/tests/: test_session.py
{{ cookiecutter.module_name|replace("_","-") }}/{{ cookiecutter.module_name }}/: __main__.py  cli.py  create_db.py  database.py  models.py
