[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py38"]

[tool.flakeheaven]
format = "colored"
max_line_length = 88

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
# Naming the value being returned helps clarify code
flake8-return = ["-R504"]
mccabe = ["+*"]
pep8-naming = ["+*"]
# Turn off pycodestyle rules that conflict with Black
pycodestyle = ["+*", "-E203", "-E501"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.isort]
multi_line_output = 10
profile = "black"
skip_glob = ["*.md", "*.json"]
src_paths = ["{{ cookiecutter.module_name }}", "tests"]
{%- if cookiecutter.use_pytest|lower == "y" %}

[tool.pytest.ini_options]
addopts = "--strict-markers"
empty_parameter_set_mark = "xfail"
testpaths = ["tests"]
{%- endif %}

